Fix wrapping bug: a menu item that was really wide

--- a/@utahdts/utah-design-system/css/6-components/base-components/navigation/_vertical-menu.scss
+++ b/@utahdts/utah-design-system/css/6-components/base-components/navigation/_vertical-menu.scss
@@ -48,6 +48,7 @@
     }
     &__link-text {
       flex: 1 0 auto;
+      max-width: 100%;
     }
     &__divider {
       display: block;
